tests/basic/infer/not_iff/070.pan.out
tests/basic/infer/not_iff/070.pan:4:1-4: error: unable to verify type of f70