tests/basic/infer/not_iff/070.pan
not : (x:bool) -> {y:bool|y = true <=> x = false}
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f70 = let b = not true in assert b


